--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
+psycopg2-binary==2.9.1
 python-dotenv==0.19.0
 regex==2021.7.6
 requests==2.26.0
