--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
   web:
     build: .
+    command: bash -c "python create_db.py && gunicorn"
     volumes:
       - .:/usr/app
     ports:
